# basic_path

./: .gitignore  CONTRIBUTING  LICENSE  README.md  pyproject.toml
basic_path/: __init__.py  basic_path_core.py  basic_path_manager.py  basic_path_utils.py
example/: main.py  pyproject.toml  utils.py
