[tool.poetry]
name = "basic-path"
version = "0.1.0"
description = "This lib provide a convenient way to access basic paths of the system and the application."
authors = ["Nig3l"]
license = "MIT License"
readme = "README.md"
packages = [{include = "basic_path"}]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
